--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sample project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d book"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/loosec9n/GitBookWorkOut#readme",
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "gulp": "^5.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-load-plugins": "^2.0.8"
